--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "9.2.0",
     "sass": "1.94.1",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.3",
     "zod": "^4.1.12"
   },
   "devDependencies": {
