--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "js-cookie": "^3.0.5",
     "motion": "^12.23.24",
     "next": "16.0.3",
-    "next-auth": "4.24.13",
+    "next-auth": "^4.24.13",
     "next-intl": "^4.5.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
