--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/js-cookie": "^3.0.6",
     "async-mutex": "^0.5.0",
     "js-cookie": "^3.0.5",
+    "material-ui-popup-state": "^5.3.6",
     "motion": "^12.23.24",
     "next": "16.0.3",
     "next-auth": "^4.24.13",
