--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "react-intersection-observer-hook": "^4.0.1",
     "react-redux": "9.2.0",
     "sass": "1.94.1",
     "sonner": "^2.0.7",
