Feat/vercel deploy (#2)
* fix: Private data fetch

* fix: page extensions

* chore: disable @typescript-eslint/ban-ts-comment

* fix: VerifyPage button prop

* fix: r2s

* fix: delete package-lock.json

* chore: new lock file

* fix: route settings

* fix: locale layout

* fix: locale layout

* fix: locale layout

* fix: locale layout

* feat: disable localization

* feat: disable client session check

* feat: Remove private component from homepage

---------

Co-authored-by: Islam Madaminov <madislam64@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@app/*": ["./src/_app"],
       "@shared/*": ["./src/shared"],
       "@entities/*": ["./src/entities"],
-      "@pages/*": ["./src/pages"],
+      "@pages/*": ["./src/_pages"],
       "@widgets/*": ["./src/widgets"],
       "@features/*": ["./src/features"]
     }
